--- a/frontend/src/css/Favorites.css
+++ b/frontend/src/css/Favorites.css
@@ -8,7 +8,7 @@
     margin-bottom: 2rem;
     text-align: center;
     font-size: 2.5rem;
-    color: #ffffff;
+    color: #e50914;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
@@ -27,7 +27,8 @@
     color: #e50914;
 }
 
-.favorites-empty p {
+.favorites-page p {
+    text-align: center;
     color: #999;
     font-size: 1.2rem;
     line-height: 1.6;
