--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -42,6 +42,14 @@
     background-color: #f40612;
 }
 
+.not-found {
+    margin-bottom: 2rem;
+    text-align: center;
+    font-size: 2.5rem;
+    color: #e50914;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
 
 @media (max-width: 639px) {
     .home {
