--- a/frontend/src/css/MovieDetails.css
+++ b/frontend/src/css/MovieDetails.css
@@ -1,6 +1,6 @@
 .back-button {
     padding: 0.75rem 1.5rem;
-    background-color: #4A90E2; /* Match your main button color */
+    background-color: #4A90E2;
     color: white;
     border-radius: 4px;
     font-weight: 500;
@@ -43,6 +43,13 @@
     margin-bottom: 1rem;
     color: #ccc;
 }
+
+.loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+};
 
 .trailer {
     margin-top: 3rem;
